ContainerAsService/podTemplates/container-as-service.yml
apiVersion: v1
kind: Pod
metadata:
 name: container-self-service
 namespace: datascienceops
 labels:
  app: container-self-service
  owner : Manasi-Belhe
spec:
 containers:
  - name: container-self-service
    image: datascienceops/container-self-service:latest
    command: ['/bin/sh', '-c']
    args: ['cd /notebook-infrastructure/ContainerAsService/ && export FLASK_APP=ContainerAsService.py && echo $FLASK_APP && flask run --host=0.0.0.0 --port=8000']
    ports:
     - containerPort: 8000
 restartPolicy: Never
