ContainerAsService/podTemplates/jupyterhub.yml
apiVersion: v1
kind: Pod
metadata:
 name: jupyterhub-$$uid$$
 namespace: $$ns$$
 labels:
  app: $$cname$$
  techcontact: $$uid$$
spec:
 containers:
  - name: $$cname$$-container-$$uid$$
    image: jupyterhub/jupyterhub:latest
    resources:
      limits:
        memory: 2048Mi
        cpu: 500m
      requests:
        memory: $$memreq$$
        cpu: $$cpureq$$
 restartPolicy: Never
