ContainerAsService/podTemplates/container-as-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: container-self-service
  namespace: datascienceops
  labels:
    app: container-self-service
    techcontact: $$uid$$
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: container-self-service
