ContainerAsService/podTemplates/jupyterhub-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-$$uid$$-service
  namespace: $$ns$$
  labels:
    app: $$cname$$
    techcontact: $$uid$$
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: $$cname$$
